upgrade contracts to support backed

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -69,9 +69,9 @@
     "vmex:node:fork:arbitrum": "FORK=arbitrum npx hardhat node --hostname 0.0.0.0",
     "vmex:node": "npx hardhat node --hostname 0.0.0.0",
     "vmex:deploy:fork:main": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
-    "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool Optimism --network optimism_localhost",
-    "vmex:deploy:fork:base": "npm run compile && FORK=base hardhat sidechain:mainnet --pool Base --network base_localhost",
-    "vmex:deploy:fork:arbitrum": "npm run compile && FORK=arbitrum hardhat sidechain:mainnet --pool Arbitrum --network arbitrum_localhost",
+    "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool optimism --network optimism_localhost",
+    "vmex:deploy:fork:base": "npm run compile && FORK=base hardhat sidechain:mainnet --pool base --network base_localhost",
+    "vmex:deploy:fork:arbitrum": "npm run compile && FORK=arbitrum hardhat sidechain:mainnet --pool arbitrum --network arbitrum_localhost",
     "vmex:dev:deploy": "npm run compile && hardhat vmex:dev --network localhost",
     "vmex:goerli:deploy": "npm run compile && hardhat vmex:dev --verify --network goerli",
     "vmex:sepolia:deploy": "npm run compile && hardhat vmex:dev --network sepolia",
@@ -86,27 +86,19 @@
     "vmex:arbfork:unit-tests": "FORK=arbitrum hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network arbitrum_localhost",
     "vmex:arbfork:unit-test": "FORK=arbitrum hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network arbitrum_localhost",
     "vmex:docker:full:migration": "npm run compile && npm run hardhat:docker -- vmex:mainnet --skip-registry",
-    "matic:mumbai:full:migration": "npm run compile && npm run hardhat:mumbai sidechain:mainnet -- --pool Matic --skip-registry",
-    "matic:matic:full:migration": "npm run compile && npm run hardhat:matic sidechain:mainnet -- --pool Matic --skip-registry",
-    "avalanche:fuji:full:migration": "npm run compile && npm run hardhat:fuji avalanche:mainnet -- --pool Avalanche",
+    "avalanche:fuji:full:migration": "npm run compile && npm run hardhat:fuji avalanche:mainnet -- --pool avalanche",
     "vmex:docker:full:migration:add-registry": "npm run compile && npm run hardhat:docker -- vmex:mainnet",
-    "matic:mumbai:full:migration:add-registry": "npm run compile && npm run hardhat:mumbai sidechain:mainnet -- --pool Matic",
-    "matic:matic:full:migration:add-registry": "npm run compile && npm run hardhat:matic sidechain:mainnet -- --pool Matic",
-    "avalanche:fuji:full:migration:add-registry": "npm run compile && npm run hardhat:fuji avalanche:mainnet -- --pool Avalanche",
-    "avalanche:mainnet:full:migration:add-registry": "npm run compile && npm run hardhat:avalanche avalanche:mainnet -- --pool Avalanche",
     "vmex:docker:add-market-to-registry-from-config": "npm run compile && npm run hardhat:docker -- add-market-to-registry --pool aave",
-    "matic:mumbai:add-market-to-registry-from-config": "npm run compile && npm run hardhat:mumbai add-market-to-registry --pool Matic",
-    "matic:matic:add-market-to-registry-from-config": "npm run compile && npm run hardhat:matic add-market-to-registry --pool Matic",
     "vmex:main:add-market-to-registry-from-config": "npm run compile && npm run hardhat:main -- add-market-to-registry --pool aave",
     "vmex:docker:add-market-to-new-registry": "npm run compile && npm run hardhat:docker -- add-market-to-registry --pool aave --deploy-registry",
-    "matic:mumbai:add-market-to-new-registry": "npm run compile && npm run hardhat:mumbai add-market-to-registry --pool Matic --verify --deploy-registry",
-    "matic:matic:add-market-to-new-registry": "npm run compile && npm run hardhat:matic -- add-market-to-registry --pool Matic --verify --deploy-registry",
-    "vmex:main:add-market-to-new-registry": "npm run compile && npm run hardhat:matic -- add-market-to-registry --pool Matic --verify --deploy-registry",
     "vmex:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- vmex:mainnet",
     "vmex:main:full:migration": "npm run compile && npm run hardhat:main -- vmex:mainnet --verify",
     "vmex:main:full:initialize": "npm run compile && FORK=main full:initialize-tokens --pool aave",
     "vmex:optimism:full:migration": "npm run compile && hardhat sidechain:mainnet --pool optimism --network optimism --verify",
     "vmex:optimism:upgrade:incentives": "npm run compile && hardhat vmex:upgrade-incentives --network optimism --verify",
+    "vmex:basefork:upgrade:oracle": "npm run compile && FORK=base hardhat vmex:upgrade-oracle --network base_localhost",
+    "vmex:base:upgrade:oracle": "npm run compile && hardhat vmex:upgrade-oracle --network base --verify",
+    "vmex:base:upgrade:assetmappings": "npm run compile && hardhat vmex:upgrade-assetmappings --network base --verify",
     "vmex:optimism:redeploy:weth-gateway": "npm run compile && hardhat full-redeploy-weth-gateway --pool optimism --network optimism --verify",
     "vmex:base:full:migration": "npm run compile && hardhat sidechain:mainnet --pool base --network base --verify",
     "vmex:sepolia:deploy:vmextoken": "npm run compile && hardhat deploy-VmexToken --network sepolia --verify",
@@ -118,16 +110,18 @@
     "ci:clean": "rm -rf ./artifacts ./cache ./types",
     "print-contracts:main": "npm run hardhat:main -- print-contracts",
     "mainnet:verify": "npm run hardhat:main verify:general -- --all --pool aave",
-    "matic:mumbai:verify": "npm run hardhat:mumbai verify:general -- --all --pool Matic",
-    "matic:mainnet:verify": "npm run hardhat:matic verify:general -- --all --pool Matic",
-    "matic:mumbai:verify:tokens": "npm run hardhat:mumbai verify:tokens -- --pool Matic",
-    "matic:mainnet:verify:tokens": "npm run hardhat:matic verify:tokens -- --pool Matic",
     "mainnet:verify:tokens": "npm run hardhat:main verify:tokens -- --pool aave",
     "sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool aave",
     "optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool optimism",
     "optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool optimism",
     "base:verify": "npm run hardhat:base verify:general -- --all --pool base",
     "base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool base",
+    "mainnet:sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool aave",
+    "vmex:optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool optimism",
+    "vmex:optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool optimism",
+    "vmex:base:verify": "npm run hardhat:base verify:general -- --all --pool base",
+    "vmex:base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool base",
+    "vmex:base:verify:unit": "npm run hardhat:base verify:unit -- --pool base",
     "print-config:fork:mainnet": "FORK=main hardhat print-config:fork",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
