--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -99,6 +99,7 @@
     "vmex:basefork:upgrade:oracle": "npm run compile && FORK=base hardhat vmex:upgrade-oracle --network base_localhost",
     "vmex:base:upgrade:oracle": "npm run compile && hardhat vmex:upgrade-oracle --network base --verify",
     "vmex:base:upgrade:assetmappings": "npm run compile && hardhat vmex:upgrade-assetmappings --network base --verify",
+    "vmex:base:set-asset-sources": "npm run compile && hardhat vmex:set-asset-sources --network base",
     "vmex:optimism:redeploy:weth-gateway": "npm run compile && hardhat full-redeploy-weth-gateway --pool optimism --network optimism --verify",
     "vmex:base:full:migration": "npm run compile && hardhat sidechain:mainnet --pool base --network base --verify",
     "vmex:sepolia:deploy:vmextoken": "npm run compile && hardhat deploy-VmexToken --network sepolia --verify",
