--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -102,6 +102,7 @@
     "vmex:base:backed-bytecode": "npm run compile && hardhat vmex:backed-bytecode --network base",
     "vmex:optimism:redeploy:weth-gateway": "npm run compile && hardhat full-redeploy-weth-gateway --pool optimism --network optimism --verify",
     "vmex:base:full:migration": "npm run compile && hardhat sidechain:mainnet --pool base --network base --verify",
+    "vmex:arbitrum:full:migration": "npm run compile && hardhat sidechain:mainnet --pool arbitrum --network arbitrum --verify",
     "vmex:sepolia:deploy:vmextoken": "npm run compile && hardhat deploy-VmexToken --network sepolia --verify",
     "vmex:permtranche": "hardhat vmex:permissionless-tranches --network goerli",
     "vmex:set-oracle": "hardhat vmex:set-oracle --network goerli",
