etherscan verify vmex token in scripts

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -123,11 +123,11 @@
     "matic:mumbai:verify:tokens": "npm run hardhat:mumbai verify:tokens -- --pool Matic",
     "matic:mainnet:verify:tokens": "npm run hardhat:matic verify:tokens -- --pool Matic",
     "mainnet:verify:tokens": "npm run hardhat:main verify:tokens -- --pool aave",
-    "mainnet:sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool aave",
-    "vmex:optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool optimism",
-    "vmex:optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool optimism",
-    "vmex:base:verify": "npm run hardhat:base verify:general -- --all --pool base",
-    "vmex:base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool base",
+    "sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool aave",
+    "optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool optimism",
+    "optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool optimism",
+    "base:verify": "npm run hardhat:base verify:general -- --all --pool base",
+    "base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool base",
     "print-config:fork:mainnet": "FORK=main hardhat print-config:fork",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
