--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@vmexfinance/sdk",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "VMEX Finance - Software Development Kit",
   "main": "dist/index.js",
   "author": "VMEX finance",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@vmexfinance/contracts": "^1.1.0",
+    "@vmexfinance/contracts": "^1.2.0",
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
@@ -30,6 +30,7 @@
     "test:optimism:getPrices": "yarn build && NETWORK=optimism mocha optimism_test --timeout 0 --reporter spec --grep getPrices",
     "test:base:wethgateway": "yarn build && NETWORK=base mocha optimism_test --timeout 0 --reporter spec --grep WETHgateway",
     "test:base:getPrices": "yarn build && NETWORK=base mocha optimism_test --timeout 0 --reporter spec --grep getPrices",
+    "test:arb:getPrices": "yarn build && NETWORK=arbitrum mocha optimism_test --timeout 0 --reporter spec --grep getPrices",
     "fund:accounts": "mocha dev --timeout 0 --reporter spec",
     "fund:vaultOfRewards": "mocha dev --timeout 0 --reporter spec --grep Fund_vault",
     "fund:goerli:accounts": "mocha dev --timeout 0 --reporter spec --grep Get_goerli",
