slight refactor and bal swap tests

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -82,8 +82,10 @@
     "vmex:mainnetfork:unit-test": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network localhost",
     "vmex:OPfork:unit-tests": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network optimism_localhost",
     "vmex:OPfork:unit-test": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network optimism_localhost",
+    "vmex:OPfork:test-bal": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests_extra/test-bal.spec.ts --network optimism_localhost",
     "vmex:basefork:unit-tests": "FORK=base hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network base_localhost",
     "vmex:basefork:unit-test": "FORK=base hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network base_localhost",
+    "vmex:basefork:test-bal": "FORK=base hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests_extra/test-bal.spec.ts --network base_localhost",
     "vmex:arbfork:unit-tests": "FORK=arbitrum hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network arbitrum_localhost",
     "vmex:arbfork:unit-test": "FORK=arbitrum hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network arbitrum_localhost",
     "vmex:docker:full:migration": "npm run compile && npm run hardhat:docker -- vmex:mainnet --skip-registry",
