--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -214,5 +214,8 @@
   "gitHead": "a28c247a72b0ffb542341fd81ef0630be3ace396",
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=18.16"
   }
 }
