--- a/packages/monitoring/package.json
+++ b/packages/monitoring/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@vmexfinance/sdk": "1.3.3",
     "dotenv": "^16.3.1",
     "node-schedule": "^2.1.1"
   },
