--- a/packages/monitoring/package.json
+++ b/packages/monitoring/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vmexfinance/monitoring",
-  "version": "1.3.2",
+  "version": "1.3.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@vmexfinance/sdk": "1.3.3",
+    "@vmexfinance/sdk": "^1.3.4",
     "dotenv": "^16.3.1",
     "node-schedule": "^2.1.1"
   },
