--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -134,9 +134,11 @@
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
     "get-uniswap-data": "hardhat get-uniswap-data --network localhost",
-    "get-velo-gauge": "hardhat get-velo-gauge --network optimism_localhost"
+    "get-velo-gauge": "hardhat get-velo-gauge --network optimism_localhost",
+    "test-CLSync": "forge test --fork-url https://mainnet.base.org --fork-block-number 4924830 --match-contract CLSyncOracle -vvvv"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@openzeppelin/contracts": "^4.9.2",
     "@prb/math": "^4.0.1",
     "bignumber.js": "9.0.0",
@@ -145,6 +147,7 @@
   },
   "devDependencies": {
     "@eth-optimism/plugins": "^1.0.0-alpha.3",
+    "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "2.0.0",
     "@nomiclabs/buidler-etherscan": "^2.1.0",
