--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -1,6 +1,6 @@
 [profile.default]
 src = 'contracts'
 out = 'out'
-libs = ['../../node_modules', 'lib']
+libs = ['lib', '../../node_modules']
 test = 'foundry_tests'
 cache_path  = 'cache_forge'
