--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -65,12 +65,12 @@
     "test-scenarios": "npm run compile && npx hardhat test test-suites/test-aave/__setup.spec.ts test-suites/test-aave/scenario.spec.ts",
     "test-subgraph:scenarios": "npm run compile && hardhat --network hardhatevm_docker test test-suites/test-aave/__setup.spec.ts test-suites/test-aave/subgraph-scenarios.spec.ts",
     "test:main:check-list": "npm run compile && FORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat test  test-suites/test-aave/__setup.spec.ts test-suites/test-aave/mainnet/check-list.spec.ts",
-    "vmex:node:fork:main": "FORK=main npx hardhat node --hostname 0.0.0.0",
+    "vmex:node:fork:main": "FORK=mainnet npx hardhat node --hostname 0.0.0.0",
     "vmex:node:fork:optimism": "FORK=optimism npx hardhat node --hostname 0.0.0.0",
     "vmex:node:fork:base": "FORK=base npx hardhat node --hostname 0.0.0.0",
     "vmex:node:fork:arbitrum": "FORK=arbitrum npx hardhat node --hostname 0.0.0.0",
     "vmex:node": "npx hardhat node --hostname 0.0.0.0",
-    "vmex:deploy:fork:main": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
+    "vmex:deploy:fork:main": "npm run compile && FORK=mainnet hardhat vmex:mainnet --network mainnet_localhost",
     "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool optimism --network optimism_localhost",
     "vmex:deploy:fork:base": "npm run compile && FORK=base hardhat sidechain:mainnet --pool base --network base_localhost",
     "vmex:deploy:fork:arbitrum": "npm run compile && FORK=arbitrum hardhat sidechain:mainnet --pool arbitrum --network arbitrum_localhost",
@@ -79,8 +79,8 @@
     "vmex:sepolia:deploy": "npm run compile && hardhat vmex:dev --network sepolia",
     "vmex:dev:test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/*.spec.ts --network localhost",
     "vmex:dev:test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/$TEST.spec.ts --network localhost",
-    "vmex:mainnetfork:unit-tests": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network localhost",
-    "vmex:mainnetfork:unit-test": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network localhost",
+    "vmex:mainnetfork:unit-tests": "FORK=mainnet hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network localhost",
+    "vmex:mainnetfork:unit-test": "FORK=mainnet hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network localhost",
     "vmex:OPfork:unit-tests": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network optimism_localhost",
     "vmex:OPfork:unit-test": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network optimism_localhost",
     "vmex:OPfork:test-bal": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests_extra/test-bal.spec.ts --network optimism_localhost",
