steth coclusion is trash

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -79,8 +79,8 @@
     "vmex:sepolia:deploy": "npm run compile && hardhat vmex:dev --network sepolia",
     "vmex:dev:test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/*.spec.ts --network localhost",
     "vmex:dev:test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/$TEST.spec.ts --network localhost",
-    "vmex:mainnetfork:unit-tests": "FORK=mainnet hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network localhost",
-    "vmex:mainnetfork:unit-test": "FORK=mainnet hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network localhost",
+    "vmex:mainnetfork:unit-tests": "FORK=mainnet hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network mainnet_localhost",
+    "vmex:mainnetfork:unit-test": "FORK=mainnet hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network mainnet_localhost",
     "vmex:OPfork:unit-tests": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network optimism_localhost",
     "vmex:OPfork:unit-test": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network optimism_localhost",
     "vmex:OPfork:test-bal": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests_extra/test-bal.spec.ts --network optimism_localhost",
