--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -104,7 +104,9 @@
     "vmex:base:upgrade:oracle": "npm run compile && hardhat vmex:upgrade-oracle --network base --verify",
     "vmex:base:upgrade:assetmappings": "npm run compile && hardhat vmex:upgrade-assetmappings --network base --verify",
     "vmex:base:backed-bytecode": "npm run compile && hardhat vmex:backed-bytecode --network base",
-    "vmex:base:add-assets": "npm run compile && hardhat add:assets --network base --pool base",
+    "vmex:add-assets": "npm run compile && hardhat add:assets --network $NETWORK --pool $NETWORK",
+    "vmex:add-assets:begin-staking": "npm run compile && hardhat add-beginStaking --network $NETWORK --pool $NETWORK",
+    "vmex:upgrade-deployed-contracts": "npm run compile && hardhat add:upgrade-contracts --network $NETWORK --pool $NETWORK",
     "vmex:optimism:redeploy:weth-gateway": "npm run compile && hardhat full-redeploy-weth-gateway --pool optimism --network optimism --verify",
     "vmex:base:full:migration": "npm run compile && hardhat sidechain:mainnet --pool base --network base --verify",
     "vmex:arbitrum:full:migration": "npm run compile && hardhat sidechain:mainnet --pool arbitrum --network arbitrum --verify",
