--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -128,8 +128,7 @@
     "vmex:optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool optimism",
     "vmex:base:verify": "npm run hardhat:base verify:general -- --all --pool base",
     "vmex:base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool base",
-    "vmex:base:verify:unit": "npm run hardhat:base verify:unit -- --pool base",
-    "vmex:arb:verify:unit": "npm run hardhat:arbitrum verify:unit -- --pool arbitrum",
+    "vmex:verify:unit": "npm run hardhat:$NETWORK verify:unit -- --pool $NETWORK",
     "print-config:fork:mainnet": "FORK=main hardhat print-config:fork",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
