--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -81,6 +81,7 @@
     "vmex:dev:test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/$TEST.spec.ts --network localhost",
     "vmex:mainnetfork:unit-tests": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network localhost",
     "vmex:mainnetfork:unit-test": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network localhost",
+    "vmex:OPprod:unit-tests": "FORK=optimism hardhat test ./prod_tests/__setup.spec.ts ./prod_tests/*.spec.ts --network optimism_localhost",
     "vmex:OPfork:unit-tests": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network optimism_localhost",
     "vmex:OPfork:unit-test": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network optimism_localhost",
     "vmex:OPfork:test-bal": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests_extra/test-bal.spec.ts --network optimism_localhost",
@@ -113,6 +114,7 @@
     "vmex:arbitrum:full:migration": "npm run compile && hardhat sidechain:mainnet --pool arbitrum --network arbitrum --verify",
     "vmex:sepolia:deploy:vmextoken": "npm run compile && hardhat deploy-VmexToken --network sepolia --verify",
     "vmex:permtranche": "hardhat vmex:permissionless-tranches --network goerli",
+    "vmex:test-prod-optimism": "FORK=optimism hardhat vmex:test-prod --network optimism_localhost",
     "vmex:set-oracle": "hardhat vmex:set-oracle --network goerli",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test-suites/test-aave/**/*.ts'",
     "prettier:write": "prettier --write 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test-suites/test-aave/**/*.ts'",
